# cookiecutter-uv

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  examples.yaml
