[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
all = []

[project.urls]
Documentation = "https://{{cookiecutter.project_slug}}.rtfd.io"
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{cookiecutter.project_slug}}"

[tool.setuptools]
packages = ["{{cookiecutter.project_slug}}"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.project_slug}}.__init__.__version__"}

[tool.bandit]
skips = ["B101", "B310"]

[tool.mypy]
show_error_codes = true
no_implicit_optional = true

[tool.pytest]
addopts = "-v --doctest-modules --cov=./ramsey --cov-report=xml"

[tool.ruff]
indent-width = 2
line-length = 80
exclude = ["*_test.py", "docs/**"]

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "W", "I001"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S101"]

[tool.ruff.lint.pydocstyle]
convention= 'google'

[tool.uv]
upgrade-package = ["jax", "jaxlib"]
dev-dependencies = [
    "gitlint",
    "jupyter",
    "pre-commit",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "ruff",
]